src/test/deca/context/invalid/sansObjet/CastToBool.deca
{
    float x  = 2020.0f;
    int y = (boolean) (x);
    print("y= ",y);
}
